--- a/src/app/pages/home/components/tarjetas/tarjetas.component.html
+++ b/src/app/pages/home/components/tarjetas/tarjetas.component.html
@@ -9,17 +9,18 @@
               <div class="single-industry-flip-wrap">
                 <div class="single-industry-flip-inner">
                   <div class="single-industry-flip-front bg-img"
-                    data-bg="../../../assets/images/imagen-destacado1-ramedicas.jpg">
+                    data-bg="../../../../assets/images/imagen-destacado1-ramedicas.jpg"
+                    style="background-image: url(../../../../assets/images/imagen-destacado1-ramedicas.jpg);">
                     <div class="single-industry-flip-front__content">
                       <h4 class="title">PROVEEDORES</h4>
                     </div>
                   </div>
                   <div class="single-industry-flip-back bg-img"
-                    data-bg="../../../assets/images/imagen-destacado1-ramedicas.jpg">
+                    data-bg="../../../assets/images/imagen-destacado1-ramedicas.jpg"style="background-image: url(../../../../assets/images/imagen-destacado1-ramedicas.jpg);">
                     <div class="single-industry-flip-back__content">
                       <p class="text">Contamos con 130 proveedores activos, de medicamentos
                         para uso humano, certificados para poder ofrecer a nuestros clientes
-                        un amplio portafolio de productos de alta calidad.</p><a href="index-3.htm"
+                        un amplio portafolio de productos de alta calidad.</p><a href="https://convocatorias.ramedicas.com/#/auth"
                         class="career-btn career-btn--style2">PROVEEDORES</a>
                     </div>
                   </div>
@@ -30,15 +31,15 @@
               <div class="single-industry-flip-wrap">
                 <div class="single-industry-flip-inner">
                   <div class="single-industry-flip-front bg-img"
-                    data-bg="../../../assets/images/imagen-destacado2-ramedicas.jpg">
+                    data-bg="../../../assets/images/imagen-destacado2-ramedicas.jpg"style="background-image: url(../../../../assets/images/imagen-destacado2-ramedicas.jpg);">
                     <div class="single-industry-flip-front__content">
                       <h4 class="title">DEVOLUCIONES</h4>
                     </div>
                   </div>
                   <div class="single-industry-flip-back bg-img"
-                    data-bg="../../../assets/images/imagen-destacado2-ramedicas.jpg">
+                    data-bg="../../../assets/images/imagen-destacado2-ramedicas.jpg"style="background-image: url(../../../../assets/images/imagen-destacado2-ramedicas.jpg);">
                     <div class="single-industry-flip-back__content">
-                      <p class="text"></p><a href="index-4.htm" class="career-btn career-btn--style2">DEVOLUCIONES</a>
+                      <p class="text"></p><a href="https://devo-client.ramedicas.com/auth" class="career-btn career-btn--style2">DEVOLUCIONES</a>
                     </div>
                   </div>
                 </div>
@@ -48,13 +49,13 @@
               <div class="single-industry-flip-wrap">
                 <div class="single-industry-flip-inner">
                   <div class="single-industry-flip-front bg-img"
-                    data-bg="../../../assets/images/imagen-destacado3-ramedicas.jpg">
+                    data-bg="../../../assets/images/imagen-destacado3-ramedicas.jpg"style="background-image: url(../../../../assets/images/imagen-destacado3-ramedicas.jpg);">
                     <div class="single-industry-flip-front__content">
                       <h4 class="title">PAGOS EN LÍNEA</h4>
                     </div>
                   </div>
                   <div class="single-industry-flip-back bg-img"
-                    data-bg="../../../assets/images/imagen-destacado3-ramedicas.jpg">
+                    data-bg="../../../assets/images/imagen-destacado3-ramedicas.jpg"style="background-image: url(../../../../assets/images/imagen-destacado3-ramedicas.jpg);">
                     <div class="single-industry-flip-back__content">
                       <p class="text"></p><a href="javascript:showModal();" class="career-btn career-btn--style2">PAGOS
                         EN LÍNEA</a>
@@ -69,3 +70,33 @@
     </div>
   </div>
 </div>
+
+
+
+
+<style>
+  .industry-flip-wrapper {
+	margin-bottom: -30px;
+}
+
+.section-space--inner--120 {
+	padding-top: 120px;
+	padding-bottom: 120px;
+}
+
+.single-industry-flip-front {
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-color: #05103B;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+  background-image: url("images/imagen-destacado1-ramedicas.jpg");
+}
+</style>
