--- a/src/app/pages/home/components/nservicios/nservicios.component.html
+++ b/src/app/pages/home/components/nservicios/nservicios.component.html
@@ -17,17 +17,15 @@
                 <div class="industry-two-slider__single-item">
                   <div class="industry-two-slider__single-item__image"><a
                       href="unidades-de-negocio/comercializacion.html"><img
-                        src="../../../assets/fotospages/thu_comercializacion_1572550762.jpg"
-                        class="img-fluid" alt="Comercialización"></a></div>
+                        src="../../../assets/fotospages/thu_comercializacion_1572550762.jpg" class="img-fluid"
+                        alt="Comercialización"></a></div>
                   <div class="industry-two-slider__single-item__content">
-                    <h3 class="title"><a
-                        href="unidades-de-negocio/comercializacion.html">Comercialización</a>
+                    <h3 class="title"><a href="unidades-de-negocio/comercializacion.html">Comercialización</a>
                     </h3>
                     <p class="subtitle"> Contamos con un amplio portafolio de productos
                       farmacéuticos de laboratorios reconocidos, para ...</p><a
-                      href="unidades-de-negocio/comercializacion.html"
-                      class="see-more-link see-more-link--dark">SABER MÁS <i
-                        class="ion-arrow-right-c"></i></a>
+                      href="unidades-de-negocio/comercializacion.html" class="see-more-link see-more-link--dark">SABER
+                      MÁS <i class="ion-arrow-right-c"></i></a>
                   </div>
                 </div>
               </div>
@@ -38,13 +36,10 @@
                         src="../../../assets/fotospages/thu_hospitalaria_1572553256.jpg" class="img-fluid"
                         alt="Hospitalaria"></a></div>
                   <div class="industry-two-slider__single-item__content">
-                    <h3 class="title"><a
-                        href="unidades-de-negocio/hospitalaria.html">Hospitalaria</a></h3>
+                    <h3 class="title"><a href="unidades-de-negocio/hospitalaria.html">Hospitalaria</a></h3>
                     <p class="subtitle"> COBERTURA: RAMEDICAS Operador Logístico Farmacéutico,
-                      cuenta con un amplio portafolio de ...</p><a
-                      href="unidades-de-negocio/hospitalaria.html"
-                      class="see-more-link see-more-link--dark">SABER MÁS <i
-                        class="ion-arrow-right-c"></i></a>
+                      cuenta con un amplio portafolio de ...</p><a href="unidades-de-negocio/hospitalaria.html"
+                      class="see-more-link see-more-link--dark">SABER MÁS <i class="ion-arrow-right-c"></i></a>
                   </div>
                 </div>
               </div>
@@ -55,13 +50,10 @@
                         src="../../../assets/fotospages/thu_dispensacion_1572553334.jpg" class="img-fluid"
                         alt="Dispensación"></a></div>
                   <div class="industry-two-slider__single-item__content">
-                    <h3 class="title"><a
-                        href="unidades-de-negocio/dispensacion.html">Dispensación</a></h3>
+                    <h3 class="title"><a href="unidades-de-negocio/dispensacion.html">Dispensación</a></h3>
                     <p class="subtitle"> RAMEDICAS Operador Logístico Farmacéutico, ofrece el
-                      servicio de dispensación de medicamentos a ...</p><a
-                      href="unidades-de-negocio/dispensacion.html"
-                      class="see-more-link see-more-link--dark">SABER MÁS <i
-                        class="ion-arrow-right-c"></i></a>
+                      servicio de dispensación de medicamentos a ...</p><a href="unidades-de-negocio/dispensacion.html"
+                      class="see-more-link see-more-link--dark">SABER MÁS <i class="ion-arrow-right-c"></i></a>
                   </div>
                 </div>
               </div>
@@ -70,9 +62,40 @@
         </div>
         <div class="ht-swiper-button-prev ht-swiper-button-prev-4 ht-swiper-button-nav d-none d-lg-block"><i
             class="ion-ios-arrow-left"></i></div>
-        <div class="ht-swiper-button-next ht-swiper-button-next-4 ht-swiper-button-nav d-none d-lg-block"><i
-            class="ion-ios-arrow-forward"></i></div>
+            <div class="ht-swiper-button-next ht-swiper-button-next-4 ht-swiper-button-nav d-none d-lg-block" tabindex="0"
+            role="button" aria-label="Next slide"><i class="ion-ios-arrow-forward"></i></div>
       </div>
     </div>
   </div>
 </div>
+<style>
+  .ht-swiper-button-nav {
+    position: absolute;
+    cursor: pointer;
+    -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), visibility 0.3s linear 2s, opacity 0.3s linear 2s;
+    -o-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), visibility 0.3s linear 2s, opacity 0.3s linear 2s;
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), visibility 0.3s linear 2s, opacity 0.3s linear 2s;
+    background-image: none;
+    text-align: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    outline: none !important;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #222;
+    border: 2px solid rgba(34, 34, 34, 0.16);
+    border-radius: 100%;
+    -webkit-box-shadow: 0 0 5px rgb(0 0 0 / 1%);
+    box-shadow: 0 0 5px rgb(0 0 0 / 1%);
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    z-index: 2;
+  }
+</style>
