--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -316,7 +316,7 @@
     right: 0;
   }
 </style>
-<div class="padrebtn wsbtn-br">
+<!-- <div class="padrebtn wsbtn-br">
   <a target="_blank" href="https://api.whatsapp.com/send?phone=573174726401&text=Hola quisiera mayor información...">
     <div class="hijobtn">
       <svg class="wsbtn" xmlns="https://www.w3.org/2000/svg" viewbox="0 0 24 24">
@@ -326,4 +326,4 @@
       </svg>
     </div>
   </a>
-</div>
+</div> -->
