--- a/src/app/pages/unidades-de-negocio/comercializacion/comercializacion.component.html
+++ b/src/app/pages/unidades-de-negocio/comercializacion/comercializacion.component.html
@@ -137,7 +137,8 @@
 
 
 <div class="breadcrumb-area breadcrumb-area-bg bg-img section-space--inner--bottom--50 section-space--inner--top--120"
-  data-bg="../../../../../assets/fotossecciones/slide_ramedicas_1568154972.jpg" style="background-image: url(../../../../../../assets/fotossecciones/slide_ramedicas_1568154972.jpg);">
+  data-bg="../../../../../assets/fotossecciones/slide_ramedicas_1568154972.jpg"
+  style="background-image: url(../../../../../../assets/fotossecciones/slide_ramedicas_1568154972.jpg);">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-12">
@@ -162,9 +163,11 @@
             <h1 class="big-title">Comercialización</h1>
           </div>
           <div class="service-details-image-block section-space--bottom--30">
-            <div class="image image-popup"><a href="../../../../../../assets/fotospages/mac_comercializacion_1572550762.jpg"
-                class="single-gallery-thumb"><img src="../../../../../../assets/fotospages/mac_comercializacion_1572550762.jpg"
-                  class="img-fluid" alt="Comercialización"></a></div>
+            <div class="image image-popup"><a
+                href="../../../../../../assets/fotospages/mac_comercializacion_1572550762.jpg"
+                class="single-gallery-thumb"><img
+                  src="../../../../../../assets/fotospages/mac_comercializacion_1572550762.jpg" class="img-fluid"
+                  alt="Comercialización"></a></div>
           </div>
           <div class="service-details-split-text section-space--bottom--60">
             <p style="text-align:justify;">Contamos con un amplio portafolio de productos farmacéuticos
@@ -373,7 +376,8 @@
               </div>
               <div class="single-sidebar-case-study">
                 <div class="single-sidebar-case-study__image"><a href="hospitalaria.html"><img
-                      src="../../../../../assets/fotospages/mic_hospitalaria_1572553256.jpg" class="img-fluid" alt="Hospitalaria"></a>
+                      src="../../../../../assets/fotospages/mic_hospitalaria_1572553256.jpg" class="img-fluid"
+                      alt="Hospitalaria"></a>
                 </div>
                 <div class="single-sidebar-case-study__content">
                   <h3 class="title"><a href="hospitalaria.html">Hospitalaria</a></h3>
@@ -381,7 +385,8 @@
               </div>
               <div class="single-sidebar-case-study">
                 <div class="single-sidebar-case-study__image"><a href="dispensacion.html"><img
-                      src="../../../../../assets/fotospages/mic_dispensacion_1572553334.jpg" class="img-fluid" alt="Dispensación"></a>
+                      src="../../../../../assets/fotospages/mic_dispensacion_1572553334.jpg" class="img-fluid"
+                      alt="Dispensación"></a>
                 </div>
                 <div class="single-sidebar-case-study__content">
                   <h3 class="title"><a href="dispensacion.html">Dispensación</a></h3>
@@ -1352,8 +1357,8 @@
     <div class="container-fluid--cp-60">
       <div class="row align-items-center">
         <div class="col-md-4 col-sm-6 col-9">
-          <div class="logo"><a href="../inicio.html"><img src="../../../assets/img/logo/logo-blue-dark.png" class="img-fluid"
-                alt="Ramédicas"></a></div>
+          <div class="logo"><a href="../inicio.html"><img src="../../../assets/img/logo/logo-blue-dark.png"
+                class="img-fluid" alt="Ramédicas"></a></div>
         </div>
         <div class="col-md-8 col-sm-6 col-3">
           <div class="mobile-menu-content"><a class="mobile-navigation-close-icon" id="mobile-menu-close-trigger"
@@ -1558,23 +1563,14 @@
   }
 </script>
 <style type="text/css">
-
-.breadcrumb-area-bg::before{
-	content: '';
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-color: rgba(0, 0, 0, 0.6);
-}
-
-.breadcrumb-page-list li.has-children {
+  .breadcrumb-area-bg {
+    background-size: cover;
+    background-position: center center;
     position: relative;
-    padding-right: 25px;
-}
+    z-index: 1;
+  }
 
-.breadcrumb-area-bg:after {
+  .breadcrumb-area-bg:after {
     position: absolute;
     top: 0;
     left: 0;
@@ -1584,30 +1580,151 @@
     opacity: 0.3;
     z-index: -1;
     content: "";
-}
+  }
 
-.breadcrumb-page-list--style2 {
-    text-align: left;
-}
-
-.breadcrumb-page-list li.has-children a {
-    color: #ffffff;
-    position: relative;
-    letter-spacing: 0.5px;
-    padding: 2px 0;
-}
-
-.breadcrumb-page-list li.has-children {
-    position: relative;
-    padding-right: 25px;
-}
-
-.breadcrumb-page-title {
+  .breadcrumb-page-title {
     font-size: 2.5rem;
     font-weight: 700;
     color: #ffffff;
     margin-bottom: 0;
-}
+  }
+
+  .breadcrumb-page-title--style2 {
+    margin-bottom: 100px;
+  }
+
+  .breadcrumb-page-list {
+    text-align: right;
+  }
+
+  .breadcrumb-page-list li {
+    display: inline-block;
+    color: #ffffff;
+    font-size: 0.8125rem;
+    line-height: 1.2;
+    font-weight: 700;
+  }
+
+  .breadcrumb-page-list li.has-children {
+    position: relative;
+    padding-right: 25px;
+  }
+
+  .breadcrumb-page-list li.has-children a {
+    color: #ffffff;
+    position: relative;
+    letter-spacing: 0.5px;
+    padding: 2px 0;
+  }
+
+  .breadcrumb-page-list li.has-children a:after {
+    -webkit-transition: 0.6s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+    -o-transition: 0.6s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+    transition: 0.6s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+    content: '';
+    width: 0;
+    height: 1px;
+    bottom: 0;
+    position: absolute;
+    left: auto;
+    right: 0;
+    z-index: 1;
+    background-color: transparent;
+  }
+
+  .breadcrumb-page-list li.has-children:before {
+    font-family: Ionicons;
+    content: '\f125';
+    font-size: 8px;
+    font-weight: 500;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+  }
+
+  .breadcrumb-page-list li.has-children:hover a:after {
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    right: auto;
+  }
+
+  .breadcrumb-page-list--style2 {
+    text-align: left;
+  }
+
+  .breadcrumb-area-bg {
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    z-index: 1;
+  }
+
+  .breadcrumb-area-bg:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    opacity: 0.3;
+    z-index: -1;
+    content: "";
+  }
+
+  .breadcrumb-area-bg::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+  }
+
+  .breadcrumb-page-list li.has-children {
+    position: relative;
+    padding-right: 25px;
+  }
+
+  .breadcrumb-area-bg:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.3;
+    z-index: -1;
+    content: "";
+  }
+
+  .breadcrumb-page-list--style2 {
+    text-align: left;
+  }
+
+  .breadcrumb-page-list li.has-children a {
+    color: #ffffff;
+    position: relative;
+    letter-spacing: 0.5px;
+    padding: 2px 0;
+  }
+
+  .breadcrumb-page-list li.has-children {
+    position: relative;
+    padding-right: 25px;
+  }
+
+  .breadcrumb-page-title {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #ffffff;
+    margin-bottom: 0;
+  }
+
   .padrebtn {
     position: fixed;
     margin: 0;
@@ -1665,11 +1782,3 @@
     right: 0;
   }
 </style>
-<div class="padrebtn wsbtn-bl"><a target="_blank"
-    href="https://api.whatsapp.com/send?phone=573174726401&text=Hola quisiera mayor información...">
-    <div class="hijobtn"><svg class="wsbtn" xmlns="https://www.w3.org/2000/svg" viewbox="0 0 24 24">
-        <path
-          d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"
-          fill="currentColor"></path>
-      </svg></div>
-  </a></div>
